# Image_Dehazing

./: .gitignore  CMakeLists.txt  main.cpp
include/: image.h  image_qt.h
lib_c/: Dehaze.c  Malloc2D_dbl.c  Malloc2D_uchr.c  arry_pix_create.c  arry_pix_destruct.c  img_create.c  img_destruct.c  img_rgb_create.c  img_rgb_destruct.c  img_rgb_to_yuv.c  img_to_map_rgb.c  img_yuv_create.c  img_yuv_destruct.c  map_create.c  map_destruct.c  map_rgb_create.c  map_rgb_destruct.c  map_to_img_rgb.c
lib_qc/: QImage_to_img_rgb.cpp  img_rgb_to_QImage.cpp
